// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login should give access to a existing user 1`] = `
Object {
  "signup": Object {
    "user": Object {
      "currencyCode": "COP",
      "email": "test2@miconomy.co",
      "id": 1,
    },
  },
}
`;

exports[`login should give access to a existing user 2`] = `
Object {
  "login": Object {
    "user": Object {
      "currencyCode": "COP",
      "email": "test2@miconomy.co",
      "id": 1,
    },
  },
}
`;
